lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:2: error: Missing closing brace `}' assumed here
var sol=getSol()
^