lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = {
var sol=getSol()
var l=sol.length
var test1 = sol(0)
var test2 = sol(1)
var dabs : Double = 0
var fabs : Double= 0
var ord : Double = 0
var i = 0
	for (k<- 0 to l-1) {
	test1 = sol(k)
	test2 = sol(k+1)
	if (test1.y == test2.y){
		dabs = test1.x
		ord = test1.y
		i = k
	while(((sol(i)).y == ord) && (i<=2000)){
		i +=	1
	}
	fabs = (sol(i)).x
	return Segment(Point(dabs,ord),Point (fabs,ord))
	}
return Segment(Point(0,0),Point(1999,0))
}
